Add comprehensive authentication system
- Add authentication models (User, Role, UserSession, MFAAttempt, AzureADConfig)
- Implement AuthService with password hashing, JWT tokens, and session management
- Add MFA support with TOTP, QR codes, and backup codes
- Integrate Azure AD authentication with OAuth 2.0 flow
- Create comprehensive API endpoints for auth, MFA, and user management
- Add React AuthContext for frontend state management
- Create Login page with internal and Azure AD authentication
- Add ProtectedRoute component with permission-based access control
- Update Layout component with user info and logout functionality
- Add authentication configuration to environment variables
- Include comprehensive documentation for setup and usage
- Support Google Authenticator and Microsoft Authenticator for MFA

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -114,3 +114,6 @@ RECORDEDFUTURE_FREE_LIMIT=3
 NORDSTELLAR_FREE_LIMIT=2
 ANOMALI_FREE_LIMIT=5
 ABUSEIPDB_FREE_LIMIT=3
+SECRET_KEY=your-secret-key-here-change-in-production
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
