--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,37 +1,49 @@
+# Core FastAPI dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-alembic==1.12.1
-psycopg2-binary==2.9.9
-redis==5.0.1
-celery==5.3.4
-requests==2.31.0
-aiohttp==3.9.1
-beautifulsoup4==4.12.2
-lxml==4.9.3
 pydantic==2.5.0
 pydantic-settings==2.1.0
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
+
+# Database
+sqlalchemy==2.0.23
+alembic==1.13.1
+psycopg2-binary==2.9.9
+
+# Redis and Celery
+redis==5.0.1
+celery==5.3.4
+
+# HTTP client
 httpx==0.25.2
-schedule==1.2.0
-feedparser==6.0.10
-stix2==3.1.0
-cybox==2.1.0.24
-indicators==0.0.1
-cryptography==41.0.8
-pandas==2.1.4
-numpy==1.25.2
+aiohttp==3.9.1
+
+# Authentication and Security
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
+pyotp==2.9.0
+qrcode[pil]==7.4.2
+
+# Machine Learning
 scikit-learn==1.3.2
-nltk==3.8.1
-textblob==0.17.1
-hashlib2==1.0.0
-python-dateutil==2.8.2
-pytz==2023.3
+numpy==1.24.4
+pandas==2.1.4
+joblib==1.3.2
+
+# Logging and Monitoring
 loguru==0.7.2
 prometheus-client==0.19.0
-pyotp==2.9.0
-qrcode==7.4.2
-httpx==0.25.2
+
+# Data Processing
+python-dateutil==2.8.2
+pytz==2023.3
+
+# Development
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+
+# Additional dependencies for EDR integration
+cryptography==41.0.8
+requests==2.31.0
+urllib3==2.1.0
